removed tab slot, fixed the issue of invisible groups

--- a/src/styles/DropIndicator.scss
+++ b/src/styles/DropIndicator.scss
@@ -33,10 +33,6 @@
 		}
 
 		.tree-item.is-group.vt-is-being-dragged-over {
-			.is-tab-slot::before {
-				background: var(--interactive-accent);
-			}
-
 			& {
 				background: hsla(var(--interactive-accent-hsl), 0.1);
 			}
